--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL= https://jobfinder-backend-jdwi.onrender.com
+VITE_BACKEND_URL= http://localhost:5000
+# https://jobfinder-backend-jdwi.onrender.com
